fixed layout issues: changed to 2-column grid for tablet up and rearranged text flow for index.html

--- a/styles/style.css
+++ b/styles/style.css
@@ -182,8 +182,9 @@ figcaption {
 
 /* Main */
 .project-grid {
-    justify-content: space-between !important;
+    justify-content: space-between;
 }
+
 
 .scroll-top {
     float: right;
